syntax = "proto3";


import "ganymede/v2/configurations/gpio_light.proto";
import "ganymede/v2/configurations/light_profile.proto";

package ganymede.v2;

message ListFeatureRequest {
}

message ListFeatureResponse {
    repeated Feature features = 1;
}

message GetFeatureRequest {
    string name = 1;
}

message CreateFeatureRequest {
    Feature feature = 1;
}

message UpdateFeatureRequest {
    Feature feature = 1;
}

message DeleteFeatureRequest {
    string name = 1;
}

message ListProfileRequest {
}

message ListProfileResponse {
    repeated Profile profiles = 1;
}

message GetProfileRequest {
    string name = 1;
}

message CreateProfileRequest {
    Profile profile = 1;
}

message UpdateProfileRequest {
    Profile profile = 1;
}

message DeleteProfileRequest {
    string name = 1;
}

message ListDeviceTypeRequest {
}

message ListDeviceTypeResponse {
    repeated DeviceType device_types = 1;
}

message GetDeviceTypeRequest {
    string name = 1;
}

message CreateDeviceTypeRequest {
    DeviceType device_type = 1;
}

message UpdateDeviceTypeRequest {
    DeviceType device_type = 1;
}

message DeleteDeviceTypeRequest {
    string name = 1;
}

message CreateDeviceRequest {
    Device device = 1;
}

message UpdateDeviceRequest {
    Device device = 1;
}

message GetDeviceRequest {
    string name = 1;
}

message ListDeviceRequest {
}

message ListDeviceResponse {
    repeated Device devices = 1;
}

message DeleteDeviceRequest {
    string name = 1;
}

message PollDeviceRequest {
    string device_mac = 1;
}

message PollDeviceResponse {

}

// Primitive message types
enum FeatureType {
    FEATURE_TYPE_UNSPECIFIED = 0;
    FEATURE_TYPE_LIGHT = 1;
}

enum ComponentType {
    COMPONENT_TYPE_UNSPECIFIED = 0;
    COMPONENT_TYPE_GPIO_LIGHT = 1;
}

message Feature {
    // Output only.
    string name = 1;

    string display_name = 10;
    FeatureType feature_type = 11;
}

message Profile {
    // Output only.
    string name = 1;

    string display_name = 10;

    repeated FeatureProfile feature_profiles = 11;
}

message FeatureProfile {
    // Output only.
    string name = 1;

    string display_name = 10;
    string feature_name = 11;

    oneof config {
        ganymede.v2.configurations.LightProfile light_profile = 20;
    }

    // Output only. Feature information for this DeviceFeature
    Feature feature = 100;
}

message DeviceType {
    // Output only.
    string name = 1;

    string display_name = 10;
    string profile_name = 11;

    repeated DeviceFeature devide_features = 12;

    // Output only. Feature information for this DeviceFeature
    Profile profile = 100;
}

message DeviceFeature {
    // Output only.
    string name = 1;

    string display_name = 10;
    string feature_name = 11;
    ComponentType component_type = 12;

    oneof config {
        ganymede.v2.configurations.GpioLight gpio_light = 20;
    };

    // Output only. Feature information for this DeviceFeature
    Feature feature = 100;
}

message Device {
    // Output only.
    string name = 1;
    
    string mac = 2;
    string display_name = 10;
    string description = 11;
    string device_type_name = 12;

    // Device timezone in IANA <zone>/<city> format
    string timezone = 13;

    // Output only. DeviceType information for this device
    DeviceType device_type = 100;
}
